source/Tools/JWccLib/parser.output
Terminals unused in grammar

    "inline"
    "restrict"


Grammar

    0 $accept: translation_unit "end of file"

    1 primary_expression: "identifier"
    2                   | constant
    3                   | "(" expression ")"

    4 constant: "f_const"
    5         | "i_const"
    6         | "sting_literal"

    7 postfix_expression: primary_expression
    8                   | postfix_expression "[" expression "]"
    9                   | postfix_expression "(" ")"
   10                   | postfix_expression "(" argument_expression_list ")"
   11                   | postfix_expression "." "identifier"
   12                   | postfix_expression "->" "identifier"
   13                   | postfix_expression "++"
   14                   | postfix_expression "--"
   15                   | "(" type_name ")" "{" initializer_list "}"
   16                   | "(" type_name ")" "{" initializer_list "," "}"

   17 argument_expression_list: assignment_expression
   18                         | argument_expression_list "," assignment_expression

   19 unary_expression: postfix_expression
   20                 | "++" unary_expression
   21                 | "--" unary_expression
   22                 | unary_operator cast_expression
   23                 | "sizeof" unary_expression
   24                 | "sizeof" "(" type_name ")"

   25 unary_operator: "&"
   26               | "*"
   27               | "+"
   28               | "-"
   29               | "~"
   30               | "!"

   31 cast_expression: unary_expression
   32                | "(" type_name ")" cast_expression

   33 multiplicative_expression: cast_expression
   34                          | multiplicative_expression "*" cast_expression
   35                          | multiplicative_expression "/" cast_expression
   36                          | multiplicative_expression "%" cast_expression

   37 additive_expression: multiplicative_expression
   38                    | additive_expression "+" multiplicative_expression
   39                    | additive_expression "-" multiplicative_expression

   40 shift_expression: additive_expression
   41                 | shift_expression "<<" additive_expression
   42                 | shift_expression ">>" additive_expression

   43 relational_expression: shift_expression
   44                      | relational_expression "<" shift_expression
   45                      | relational_expression ">" shift_expression
   46                      | relational_expression "<=" shift_expression
   47                      | relational_expression ">=" shift_expression

   48 equality_expression: relational_expression
   49                    | equality_expression "==" relational_expression
   50                    | equality_expression "!=" relational_expression

   51 and_expression: equality_expression
   52               | and_expression "&" equality_expression

   53 exclusive_or_expression: and_expression
   54                        | exclusive_or_expression "^" and_expression

   55 inclusive_or_expression: exclusive_or_expression
   56                        | inclusive_or_expression "|" exclusive_or_expression

   57 logical_and_expression: inclusive_or_expression
   58                       | logical_and_expression "&&" inclusive_or_expression

   59 logical_or_expression: logical_and_expression
   60                      | logical_or_expression "||" logical_and_expression

   61 conditional_expression: logical_or_expression
   62                       | logical_or_expression "question" expression ":" conditional_expression

   63 assignment_expression: conditional_expression
   64                      | unary_expression assignment_operator assignment_expression

   65 assignment_operator: "="
   66                    | "*="
   67                    | "/="
   68                    | "%="
   69                    | "+="
   70                    | "-="
   71                    | "<<="
   72                    | ">>="
   73                    | "&="
   74                    | "^="
   75                    | "|="

   76 expression: assignment_expression
   77           | expression "," assignment_expression

   78 constant_expression: conditional_expression

   79 declaration: declaration_specifiers ";"
   80            | declaration_specifiers init_declarator_list ";"

   81 declaration_specifiers: storage_class_specifier
   82                       | storage_class_specifier declaration_specifiers
   83                       | type_specifier
   84                       | type_specifier declaration_specifiers
   85                       | type_qualifier
   86                       | type_qualifier declaration_specifiers

   87 init_declarator_list: init_declarator
   88                     | init_declarator_list "," init_declarator

   89 init_declarator: declarator
   90                | declarator "=" initializer

   91 storage_class_specifier: "typedef"
   92                        | "extern"
   93                        | "static"
   94                        | "auto"
   95                        | "register"

   96 type_specifier: "void"
   97               | "char"
   98               | "short"
   99               | INT
  100               | "long"
  101               | "long long"
  102               | "float"
  103               | "double"
  104               | "long double"
  105               | "bool"
  106               | "signed"
  107               | "unsigned"
  108               | struct_or_union_specifier
  109               | enum_specifier
  110               | "type name"

  111 struct_or_union_specifier: struct_or_union "identifier" "{" struct_declaration_list "}"
  112                          | struct_or_union "{" struct_declaration_list "}"
  113                          | struct_or_union "identifier"

  114 struct_or_union: "struct"
  115                | "union"

  116 struct_declaration_list: struct_declaration
  117                        | struct_declaration_list struct_declaration

  118 struct_declaration: specifier_qualifier_list struct_declarator_list ";"

  119 specifier_qualifier_list: type_specifier specifier_qualifier_list
  120                         | type_specifier
  121                         | type_qualifier specifier_qualifier_list
  122                         | type_qualifier

  123 struct_declarator_list: struct_declarator
  124                       | struct_declarator_list "," struct_declarator

  125 struct_declarator: declarator
  126                  | ":" constant_expression
  127                  | declarator ":" constant_expression

  128 enum_specifier: "enum" "{" enumerator_list "}"
  129               | "enum" "identifier" "{" enumerator_list "}"
  130               | "enum" "identifier"

  131 enumerator_list: enumerator
  132                | enumerator_list "," enumerator

  133 enumerator: "identifier"
  134           | "identifier" "=" constant_expression

  135 type_qualifier: "const"
  136               | "volatile"

  137 declarator: pointer direct_declarator
  138           | direct_declarator

  139 direct_declarator: "identifier"
  140                  | "(" declarator ")"
  141                  | direct_declarator "[" constant_expression "]"
  142                  | direct_declarator "[" "]"
  143                  | direct_declarator "(" parameter_type_list ")"
  144                  | direct_declarator "(" identifier_list ")"
  145                  | direct_declarator "(" ")"

  146 pointer: "*"
  147        | "*" type_qualifier_list
  148        | "*" pointer
  149        | "*" type_qualifier_list pointer

  150 type_qualifier_list: type_qualifier
  151                    | type_qualifier_list type_qualifier

  152 parameter_type_list: parameter_list
  153                    | parameter_list "," "ellipsis"

  154 parameter_list: parameter_declaration
  155               | parameter_list "," parameter_declaration

  156 parameter_declaration: declaration_specifiers declarator
  157                      | declaration_specifiers abstract_declarator
  158                      | declaration_specifiers

  159 identifier_list: "identifier"
  160                | identifier_list "," "identifier"

  161 type_name: specifier_qualifier_list
  162          | specifier_qualifier_list abstract_declarator

  163 abstract_declarator: pointer
  164                    | direct_abstract_declarator
  165                    | pointer direct_abstract_declarator

  166 direct_abstract_declarator: "(" abstract_declarator ")"
  167                           | "[" "]"
  168                           | "(" ")"
  169                           | "[" constant_expression "]"
  170                           | "(" parameter_type_list ")"
  171                           | direct_abstract_declarator "[" "]"
  172                           | direct_abstract_declarator "(" ")"
  173                           | direct_abstract_declarator "[" constant_expression "]"
  174                           | direct_abstract_declarator "(" parameter_type_list ")"

  175 initializer: assignment_expression
  176            | "{" initializer_list "}"
  177            | "{" initializer_list "," "}"

  178 initializer_list: initializer
  179                 | initializer_list "," initializer

  180 statement: labeled_statement
  181          | compound_statement
  182          | expression_statement
  183          | selection_statement
  184          | iteration_statement
  185          | jump_statement

  186 labeled_statement: "identifier" ":" statement
  187                  | "case" constant_expression ":" statement
  188                  | "default" ":" statement

  189 compound_statement: "{" "}"
  190                   | "{" statement_list "}"
  191                   | "{" declaration_list "}"
  192                   | "{" declaration_list statement_list "}"

  193 declaration_list: declaration
  194                 | declaration_list declaration

  195 statement_list: statement
  196               | statement_list statement

  197 expression_statement: ";"
  198                     | expression ";"

  199 selection_statement: "if" "(" expression ")" statement
  200                    | "if" "(" expression ")" statement "else" statement
  201                    | "switch" "(" expression ")" statement

  202 iteration_statement: "while" "(" expression ")" statement
  203                    | "do" statement "while" "(" expression ")" ";"
  204                    | "for" "(" expression_statement expression_statement ")" statement
  205                    | "for" "(" expression_statement expression_statement expression ")" statement

  206 jump_statement: "goto" "identifier" ";"
  207               | "continue" ";"
  208               | "break" ";"
  209               | "return" ";"
  210               | "return" expression ";"

  211 translation_unit: external_declaration
  212                 | translation_unit external_declaration

  213 external_declaration: function_definition
  214                     | declaration

  215 function_definition: declaration_specifiers declarator declaration_list compound_statement
  216                    | declaration_specifiers declarator compound_statement
  217                    | declarator declaration_list compound_statement
  218                    | declarator compound_statement


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    "identifier" <TokenPtr> (258) 1 11 12 111 113 129 130 133 134 139 159 160 186 206
    "i_const" <TokenPtr> (259) 5
    "f_const" <TokenPtr> (260) 4
    "sting_literal" <TokenPtr> (261) 6
    "type name" <TokenPtr> (262) 110
    "auto" <TokenPtr> (263) 94
    "break" <TokenPtr> (264) 208
    "case" <TokenPtr> (265) 187
    "char" <TokenPtr> (266) 97
    "const" <TokenPtr> (267) 135
    "continue" <TokenPtr> (268) 207
    "default" <TokenPtr> (269) 188
    "do" <TokenPtr> (270) 203
    "double" <TokenPtr> (271) 103
    "long double" <TokenPtr> (272) 104
    "else" <TokenPtr> (273) 200
    "enum" <TokenPtr> (274) 128 129 130
    "extern" <TokenPtr> (275) 92
    "float" <TokenPtr> (276) 102
    "for" <TokenPtr> (277) 204 205
    "goto" <TokenPtr> (278) 206
    "if" <TokenPtr> (279) 199 200
    "inline" <TokenPtr> (280)
    INT <TokenPtr> (281) 99
    "long" <TokenPtr> (282) 100
    "long long" <TokenPtr> (283) 101
    "register" <TokenPtr> (284) 95
    "restrict" <TokenPtr> (285)
    "return" <TokenPtr> (286) 209 210
    "short" <TokenPtr> (287) 98
    "signed" <TokenPtr> (288) 106
    "sizeof" <TokenPtr> (289) 23 24
    "static" <TokenPtr> (290) 93
    "struct" <TokenPtr> (291) 114
    "switch" <TokenPtr> (292) 201
    "typedef" <TokenPtr> (293) 91
    "union" <TokenPtr> (294) 115
    "unsigned" <TokenPtr> (295) 107
    "void" <TokenPtr> (296) 96
    "volatile" <TokenPtr> (297) 136
    "while" <TokenPtr> (298) 202 203
    "bool" <TokenPtr> (299) 105
    "ellipsis" <TokenPtr> (300) 153
    "question" <TokenPtr> (301) 62
    ";" <TokenPtr> (302) 79 80 118 197 198 203 206 207 208 209 210
    "{" <TokenPtr> (303) 15 16 111 112 128 129 176 177 189 190 191 192
    "}" <TokenPtr> (304) 15 16 111 112 128 129 176 177 189 190 191 192
    "," <TokenPtr> (305) 16 18 77 88 124 132 153 155 160 177 179
    ":" <TokenPtr> (306) 62 126 127 186 187 188
    "(" <TokenPtr> (307) 3 9 10 15 16 24 32 140 143 144 145 166 168 170 172 174 199 200 201 202 203 204 205
    ")" <TokenPtr> (308) 3 9 10 15 16 24 32 140 143 144 145 166 168 170 172 174 199 200 201 202 203 204 205
    "[" <TokenPtr> (309) 8 141 142 167 169 171 173
    "]" <TokenPtr> (310) 8 141 142 167 169 171 173
    "." <TokenPtr> (311) 11
    "~" <TokenPtr> (312) 29
    "=" <TokenPtr> (313) 65 90 134
    ">>=" <TokenPtr> (314) 72
    "<<=" <TokenPtr> (315) 71
    "+=" <TokenPtr> (316) 69
    "-=" <TokenPtr> (317) 70
    "*=" <TokenPtr> (318) 66
    "/=" <TokenPtr> (319) 67
    "%=" <TokenPtr> (320) 68
    "&=" <TokenPtr> (321) 73
    "^=" <TokenPtr> (322) 74
    "|=" <TokenPtr> (323) 75
    ">>" <TokenPtr> (324) 42
    "<<" <TokenPtr> (325) 41
    "++" <TokenPtr> (326) 13 20
    "--" <TokenPtr> (327) 14 21
    "->" <TokenPtr> (328) 12
    "&&" <TokenPtr> (329) 58
    "||" <TokenPtr> (330) 60
    ">=" <TokenPtr> (331) 47
    "<=" <TokenPtr> (332) 46
    ">" <TokenPtr> (333) 45
    "<" <TokenPtr> (334) 44
    "==" <TokenPtr> (335) 49
    "!=" <TokenPtr> (336) 50
    "!" <TokenPtr> (337) 30
    "^" <TokenPtr> (338) 54
    "&" <TokenPtr> (339) 25 52
    "|" <TokenPtr> (340) 56
    "-" <TokenPtr> (341) 28 39
    "+" <TokenPtr> (342) 27 38
    "*" <TokenPtr> (343) 26 34 146 147 148 149
    "/" <TokenPtr> (344) 35
    "%" <TokenPtr> (345) 36
    "then" (346)


Nonterminals, with rules where they appear

    $accept (92)
        on left: 0
    primary_expression <ExpressionTree *> (93)
        on left: 1 2 3
        on right: 7
    constant <Constant *> (94)
        on left: 4 5 6
        on right: 2
    postfix_expression <ExpressionTree *> (95)
        on left: 7 8 9 10 11 12 13 14 15 16
        on right: 8 9 10 11 12 13 14 19
    argument_expression_list <vector<ExpressionTree *> *> (96)
        on left: 17 18
        on right: 10 18
    unary_expression <ExpressionTree *> (97)
        on left: 19 20 21 22 23 24
        on right: 20 21 23 31 64
    unary_operator <TokenPtr> (98)
        on left: 25 26 27 28 29 30
        on right: 22
    cast_expression <ExpressionTree *> (99)
        on left: 31 32
        on right: 22 32 33 34 35 36
    multiplicative_expression <ExpressionTree *> (100)
        on left: 33 34 35 36
        on right: 34 35 36 37 38 39
    additive_expression <ExpressionTree *> (101)
        on left: 37 38 39
        on right: 38 39 40 41 42
    shift_expression <ExpressionTree *> (102)
        on left: 40 41 42
        on right: 41 42 43 44 45 46 47
    relational_expression <ExpressionTree *> (103)
        on left: 43 44 45 46 47
        on right: 44 45 46 47 48 49 50
    equality_expression <ExpressionTree *> (104)
        on left: 48 49 50
        on right: 49 50 51 52
    and_expression <ExpressionTree *> (105)
        on left: 51 52
        on right: 52 53 54
    exclusive_or_expression <ExpressionTree *> (106)
        on left: 53 54
        on right: 54 55 56
    inclusive_or_expression <ExpressionTree *> (107)
        on left: 55 56
        on right: 56 57 58
    logical_and_expression <ExpressionTree *> (108)
        on left: 57 58
        on right: 58 59 60
    logical_or_expression <ExpressionTree *> (109)
        on left: 59 60
        on right: 60 61 62
    conditional_expression <ExpressionTree *> (110)
        on left: 61 62
        on right: 62 63 78
    assignment_expression <ExpressionTree *> (111)
        on left: 63 64
        on right: 17 18 64 76 77 175
    assignment_operator <TokenPtr> (112)
        on left: 65 66 67 68 69 70 71 72 73 74 75
        on right: 64
    expression <ExpressionTree *> (113)
        on left: 76 77
        on right: 3 8 62 77 198 199 200 201 202 203 205 210
    constant_expression <ExpressionTree *> (114)
        on left: 78
        on right: 126 127 134 141 169 173 187
    declaration <Declaration *> (115)
        on left: 79 80
        on right: 193 194 214
    declaration_specifiers <DeclarationSpecifiers *> (116)
        on left: 81 82 83 84 85 86
        on right: 79 80 82 84 86 156 157 158 215 216
    init_declarator_list <std::vector<InitDeclarator *> *> (117)
        on left: 87 88
        on right: 80 88
    init_declarator <InitDeclarator *> (118)
        on left: 89 90
        on right: 87 88
    storage_class_specifier <StorageClassSpecifier *> (119)
        on left: 91 92 93 94 95
        on right: 81 82
    type_specifier <TypeSpecifier *> (120)
        on left: 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110
        on right: 83 84 119 120
    struct_or_union_specifier <StructOrUnionSpecifier *> (121)
        on left: 111 112 113
        on right: 108
    struct_or_union <TokenPtr> (122)
        on left: 114 115
        on right: 111 112 113
    struct_declaration_list <std::vector<StructDeclaration *> *> (123)
        on left: 116 117
        on right: 111 112 117
    struct_declaration <StructDeclaration *> (124)
        on left: 118
        on right: 116 117
    specifier_qualifier_list <SpecifierQualifierList *> (125)
        on left: 119 120 121 122
        on right: 118 119 121 161 162
    struct_declarator_list <std::vector<StructDeclarator *> *> (126)
        on left: 123 124
        on right: 118 124
    struct_declarator <StructDeclarator *> (127)
        on left: 125 126 127
        on right: 123 124
    enum_specifier <EnumSpecifier *> (128)
        on left: 128 129 130
        on right: 109
    enumerator_list <std::vector<Enumerator *> *> (129)
        on left: 131 132
        on right: 128 129 132
    enumerator <Enumerator *> (130)
        on left: 133 134
        on right: 131 132
    type_qualifier <TypeQualifier *> (131)
        on left: 135 136
        on right: 85 86 121 122 150 151
    declarator <Declarator *> (132)
        on left: 137 138
        on right: 89 90 125 127 140 156 215 216 217 218
    direct_declarator <DirectDeclarator *> (133)
        on left: 139 140 141 142 143 144 145
        on right: 137 138 141 142 143 144 145
    pointer <Pointer *> (134)
        on left: 146 147 148 149
        on right: 137 148 149 163 165
    type_qualifier_list <std::vector<TypeQualifier *> *> (135)
        on left: 150 151
        on right: 147 149 151
    parameter_type_list <ParameterTypeList *> (136)
        on left: 152 153
        on right: 143 170 174
    parameter_list <std::vector<ParameterDeclaration *> *> (137)
        on left: 154 155
        on right: 152 153 155
    parameter_declaration <ParameterDeclaration *> (138)
        on left: 156 157 158
        on right: 154 155
    identifier_list <std::vector<TokenPtr> *> (139)
        on left: 159 160
        on right: 144 160
    type_name <TypeName *> (140)
        on left: 161 162
        on right: 15 16 24 32
    abstract_declarator <AbstractDeclarator *> (141)
        on left: 163 164 165
        on right: 157 162 166
    direct_abstract_declarator <DirectAbstractDeclarator *> (142)
        on left: 166 167 168 169 170 171 172 173 174
        on right: 164 165 171 172 173 174
    initializer <Initializer *> (143)
        on left: 175 176 177
        on right: 90 178 179
    initializer_list <std::vector<Initializer *> *> (144)
        on left: 178 179
        on right: 15 16 176 177 179
    statement <BaseStatement *> (145)
        on left: 180 181 182 183 184 185
        on right: 186 187 188 195 196 199 200 201 202 203 204 205
    labeled_statement <LabeledStatement *> (146)
        on left: 186 187 188
        on right: 180
    compound_statement <BaseStatement *> (147)
        on left: 189 190 191 192
        on right: 181 215 216 217 218
    declaration_list <std::vector<Declaration *> *> (148)
        on left: 193 194
        on right: 191 192 194 215 217
    statement_list <std::vector<BaseStatement *> *> (149)
        on left: 195 196
        on right: 190 192 196
    expression_statement <BaseStatement *> (150)
        on left: 197 198
        on right: 182 204 205
    selection_statement <BaseStatement *> (151)
        on left: 199 200 201
        on right: 183
    iteration_statement <BaseStatement *> (152)
        on left: 202 203 204 205
        on right: 184
    jump_statement <BaseStatement *> (153)
        on left: 206 207 208 209 210
        on right: 185
    translation_unit (154)
        on left: 211 212
        on right: 0 212
    external_declaration <ExternalDeclaration *> (155)
        on left: 213 214
        on right: 211 212
    function_definition <FunctionDefinition *> (156)
        on left: 215 216 217 218
        on right: 213


State 0

    0 $accept: . translation_unit "end of file"

    "identifier"   shift, and go to state 1
    "type name"    shift, and go to state 2
    "auto"         shift, and go to state 3
    "char"         shift, and go to state 4
    "const"        shift, and go to state 5
    "double"       shift, and go to state 6
    "long double"  shift, and go to state 7
    "enum"         shift, and go to state 8
    "extern"       shift, and go to state 9
    "float"        shift, and go to state 10
    INT            shift, and go to state 11
    "long"         shift, and go to state 12
    "long long"    shift, and go to state 13
    "register"     shift, and go to state 14
    "short"        shift, and go to state 15
    "signed"       shift, and go to state 16
    "static"       shift, and go to state 17
    "struct"       shift, and go to state 18
    "typedef"      shift, and go to state 19
    "union"        shift, and go to state 20
    "unsigned"     shift, and go to state 21
    "void"         shift, and go to state 22
    "volatile"     shift, and go to state 23
    "bool"         shift, and go to state 24
    "("            shift, and go to state 25
    "*"            shift, and go to state 26

    declaration                go to state 27
    declaration_specifiers     go to state 28
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    struct_or_union_specifier  go to state 31
    struct_or_union            go to state 32
    enum_specifier             go to state 33
    type_qualifier             go to state 34
    declarator                 go to state 35
    direct_declarator          go to state 36
    pointer                    go to state 37
    translation_unit           go to state 38
    external_declaration       go to state 39
    function_definition        go to state 40


State 1

  139 direct_declarator: "identifier" .

    $default  reduce using rule 139 (direct_declarator)


State 2

  110 type_specifier: "type name" .

    $default  reduce using rule 110 (type_specifier)


State 3

   94 storage_class_specifier: "auto" .

    $default  reduce using rule 94 (storage_class_specifier)


State 4

   97 type_specifier: "char" .

    $default  reduce using rule 97 (type_specifier)


State 5

  135 type_qualifier: "const" .

    $default  reduce using rule 135 (type_qualifier)


State 6

  103 type_specifier: "double" .

    $default  reduce using rule 103 (type_specifier)


State 7

  104 type_specifier: "long double" .

    $default  reduce using rule 104 (type_specifier)


State 8

  128 enum_specifier: "enum" . "{" enumerator_list "}"
  129               | "enum" . "identifier" "{" enumerator_list "}"
  130               | "enum" . "identifier"

    "identifier"  shift, and go to state 41
    "{"           shift, and go to state 42


State 9

   92 storage_class_specifier: "extern" .

    $default  reduce using rule 92 (storage_class_specifier)


State 10

  102 type_specifier: "float" .

    $default  reduce using rule 102 (type_specifier)


State 11

   99 type_specifier: INT .

    $default  reduce using rule 99 (type_specifier)


State 12

  100 type_specifier: "long" .

    $default  reduce using rule 100 (type_specifier)


State 13

  101 type_specifier: "long long" .

    $default  reduce using rule 101 (type_specifier)


State 14

   95 storage_class_specifier: "register" .

    $default  reduce using rule 95 (storage_class_specifier)


State 15

   98 type_specifier: "short" .

    $default  reduce using rule 98 (type_specifier)


State 16

  106 type_specifier: "signed" .

    $default  reduce using rule 106 (type_specifier)


State 17

   93 storage_class_specifier: "static" .

    $default  reduce using rule 93 (storage_class_specifier)


State 18

  114 struct_or_union: "struct" .

    $default  reduce using rule 114 (struct_or_union)


State 19

   91 storage_class_specifier: "typedef" .

    $default  reduce using rule 91 (storage_class_specifier)


State 20

  115 struct_or_union: "union" .

    $default  reduce using rule 115 (struct_or_union)


State 21

  107 type_specifier: "unsigned" .

    $default  reduce using rule 107 (type_specifier)


State 22

   96 type_specifier: "void" .

    $default  reduce using rule 96 (type_specifier)


State 23

  136 type_qualifier: "volatile" .

    $default  reduce using rule 136 (type_qualifier)


State 24

  105 type_specifier: "bool" .

    $default  reduce using rule 105 (type_specifier)


State 25

  140 direct_declarator: "(" . declarator ")"

    "identifier"  shift, and go to state 1
    "("           shift, and go to state 25
    "*"           shift, and go to state 26

    declarator         go to state 43
    direct_declarator  go to state 36
    pointer            go to state 37


State 26

  146 pointer: "*" .
  147        | "*" . type_qualifier_list
  148        | "*" . pointer
  149        | "*" . type_qualifier_list pointer

    "const"     shift, and go to state 5
    "volatile"  shift, and go to state 23
    "*"         shift, and go to state 26

    $default  reduce using rule 146 (pointer)

    type_qualifier       go to state 44
    pointer              go to state 45
    type_qualifier_list  go to state 46


State 27

  214 external_declaration: declaration .

    $default  reduce using rule 214 (external_declaration)


State 28

   79 declaration: declaration_specifiers . ";"
   80            | declaration_specifiers . init_declarator_list ";"
  215 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  216                    | declaration_specifiers . declarator compound_statement

    "identifier"  shift, and go to state 1
    ";"           shift, and go to state 47
    "("           shift, and go to state 25
    "*"           shift, and go to state 26

    init_declarator_list  go to state 48
    init_declarator       go to state 49
    declarator            go to state 50
    direct_declarator     go to state 36
    pointer               go to state 37


State 29

   81 declaration_specifiers: storage_class_specifier .
   82                       | storage_class_specifier . declaration_specifiers

    "type name"    shift, and go to state 2
    "auto"         shift, and go to state 3
    "char"         shift, and go to state 4
    "const"        shift, and go to state 5
    "double"       shift, and go to state 6
    "long double"  shift, and go to state 7
    "enum"         shift, and go to state 8
    "extern"       shift, and go to state 9
    "float"        shift, and go to state 10
    INT            shift, and go to state 11
    "long"         shift, and go to state 12
    "long long"    shift, and go to state 13
    "register"     shift, and go to state 14
    "short"        shift, and go to state 15
    "signed"       shift, and go to state 16
    "static"       shift, and go to state 17
    "struct"       shift, and go to state 18
    "typedef"      shift, and go to state 19
    "union"        shift, and go to state 20
    "unsigned"     shift, and go to state 21
    "void"         shift, and go to state 22
    "volatile"     shift, and go to state 23
    "bool"         shift, and go to state 24

    $default  reduce using rule 81 (declaration_specifiers)

    declaration_specifiers     go to state 51
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    struct_or_union_specifier  go to state 31
    struct_or_union            go to state 32
    enum_specifier             go to state 33
    type_qualifier             go to state 34


State 30

   83 declaration_specifiers: type_specifier .
   84                       | type_specifier . declaration_specifiers

    "type name"    shift, and go to state 2
    "auto"         shift, and go to state 3
    "char"         shift, and go to state 4
    "const"        shift, and go to state 5
    "double"       shift, and go to state 6
    "long double"  shift, and go to state 7
    "enum"         shift, and go to state 8
    "extern"       shift, and go to state 9
    "float"        shift, and go to state 10
    INT            shift, and go to state 11
    "long"         shift, and go to state 12
    "long long"    shift, and go to state 13
    "register"     shift, and go to state 14
    "short"        shift, and go to state 15
    "signed"       shift, and go to state 16
    "static"       shift, and go to state 17
    "struct"       shift, and go to state 18
    "typedef"      shift, and go to state 19
    "union"        shift, and go to state 20
    "unsigned"     shift, and go to state 21
    "void"         shift, and go to state 22
    "volatile"     shift, and go to state 23
    "bool"         shift, and go to state 24

    $default  reduce using rule 83 (declaration_specifiers)

    declaration_specifiers     go to state 52
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    struct_or_union_specifier  go to state 31
    struct_or_union            go to state 32
    enum_specifier             go to state 33
    type_qualifier             go to state 34


State 31

  108 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 108 (type_specifier)


State 32

  111 struct_or_union_specifier: struct_or_union . "identifier" "{" struct_declaration_list "}"
  112                          | struct_or_union . "{" struct_declaration_list "}"
  113                          | struct_or_union . "identifier"

    "identifier"  shift, and go to state 53
    "{"           shift, and go to state 54


State 33

  109 type_specifier: enum_specifier .

    $default  reduce using rule 109 (type_specifier)


State 34

   85 declaration_specifiers: type_qualifier .
   86                       | type_qualifier . declaration_specifiers

    "type name"    shift, and go to state 2
    "auto"         shift, and go to state 3
    "char"         shift, and go to state 4
    "const"        shift, and go to state 5
    "double"       shift, and go to state 6
    "long double"  shift, and go to state 7
    "enum"         shift, and go to state 8
    "extern"       shift, and go to state 9
    "float"        shift, and go to state 10
    INT            shift, and go to state 11
    "long"         shift, and go to state 12
    "long long"    shift, and go to state 13
    "register"     shift, and go to state 14
    "short"        shift, and go to state 15
    "signed"       shift, and go to state 16
    "static"       shift, and go to state 17
    "struct"       shift, and go to state 18
    "typedef"      shift, and go to state 19
    "union"        shift, and go to state 20
    "unsigned"     shift, and go to state 21
    "void"         shift, and go to state 22
    "volatile"     shift, and go to state 23
    "bool"         shift, and go to state 24

    $default  reduce using rule 85 (declaration_specifiers)

    declaration_specifiers     go to state 55
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    struct_or_union_specifier  go to state 31
    struct_or_union            go to state 32
    enum_specifier             go to state 33
    type_qualifier             go to state 34


State 35

  217 function_definition: declarator . declaration_list compound_statement
  218                    | declarator . compound_statement

    "type name"    shift, and go to state 2
    "auto"         shift, and go to state 3
    "char"         shift, and go to state 4
    "const"        shift, and go to state 5
    "double"       shift, and go to state 6
    "long double"  shift, and go to state 7
    "enum"         shift, and go to state 8
    "extern"       shift, and go to state 9
    "float"        shift, and go to state 10
    INT            shift, and go to state 11
    "long"         shift, and go to state 12
    "long long"    shift, and go to state 13
    "register"     shift, and go to state 14
    "short"        shift, and go to state 15
    "signed"       shift, and go to state 16
    "static"       shift, and go to state 17
    "struct"       shift, and go to state 18
    "typedef"      shift, and go to state 19
    "union"        shift, and go to state 20
    "unsigned"     shift, and go to state 21
    "void"         shift, and go to state 22
    "volatile"     shift, and go to state 23
    "bool"         shift, and go to state 24
    "{"            shift, and go to state 56

    declaration                go to state 57
    declaration_specifiers     go to state 58
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    struct_or_union_specifier  go to state 31
    struct_or_union            go to state 32
    enum_specifier             go to state 33
    type_qualifier             go to state 34
    compound_statement         go to state 59
    declaration_list           go to state 60


State 36

  138 declarator: direct_declarator .
  141 direct_declarator: direct_declarator . "[" constant_expression "]"
  142                  | direct_declarator . "[" "]"
  143                  | direct_declarator . "(" parameter_type_list ")"
  144                  | direct_declarator . "(" identifier_list ")"
  145                  | direct_declarator . "(" ")"

    "("  shift, and go to state 61
    "["  shift, and go to state 62

    $default  reduce using rule 138 (declarator)


State 37

  137 declarator: pointer . direct_declarator

    "identifier"  shift, and go to state 1
    "("           shift, and go to state 25

    direct_declarator  go to state 63


State 38

    0 $accept: translation_unit . "end of file"
  212 translation_unit: translation_unit . external_declaration

    "end of file"  shift, and go to state 64
    "identifier"   shift, and go to state 1
    "type name"    shift, and go to state 2
    "auto"         shift, and go to state 3
    "char"         shift, and go to state 4
    "const"        shift, and go to state 5
    "double"       shift, and go to state 6
    "long double"  shift, and go to state 7
    "enum"         shift, and go to state 8
    "extern"       shift, and go to state 9
    "float"        shift, and go to state 10
    INT            shift, and go to state 11
    "long"         shift, and go to state 12
    "long long"    shift, and go to state 13
    "register"     shift, and go to state 14
    "short"        shift, and go to state 15
    "signed"       shift, and go to state 16
    "static"       shift, and go to state 17
    "struct"       shift, and go to state 18
    "typedef"      shift, and go to state 19
    "union"        shift, and go to state 20
    "unsigned"     shift, and go to state 21
    "void"         shift, and go to state 22
    "volatile"     shift, and go to state 23
    "bool"         shift, and go to state 24
    "("            shift, and go to state 25
    "*"            shift, and go to state 26

    declaration                go to state 27
    declaration_specifiers     go to state 28
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    struct_or_union_specifier  go to state 31
    struct_or_union            go to state 32
    enum_specifier             go to state 33
    type_qualifier             go to state 34
    declarator                 go to state 35
    direct_declarator          go to state 36
    pointer                    go to state 37
    external_declaration       go to state 65
    function_definition        go to state 40


State 39

  211 translation_unit: external_declaration .

    $default  reduce using rule 211 (translation_unit)


State 40

  213 external_declaration: function_definition .

    $default  reduce using rule 213 (external_declaration)


State 41

  129 enum_specifier: "enum" "identifier" . "{" enumerator_list "}"
  130               | "enum" "identifier" .

    "{"  shift, and go to state 66

    $default  reduce using rule 130 (enum_specifier)


State 42

  128 enum_specifier: "enum" "{" . enumerator_list "}"

    "identifier"  shift, and go to state 67

    enumerator_list  go to state 68
    enumerator       go to state 69


State 43

  140 direct_declarator: "(" declarator . ")"

    ")"  shift, and go to state 70


State 44

  150 type_qualifier_list: type_qualifier .

    $default  reduce using rule 150 (type_qualifier_list)


State 45

  148 pointer: "*" pointer .

    $default  reduce using rule 148 (pointer)


State 46

  147 pointer: "*" type_qualifier_list .
  149        | "*" type_qualifier_list . pointer
  151 type_qualifier_list: type_qualifier_list . type_qualifier

    "const"     shift, and go to state 5
    "volatile"  shift, and go to state 23
    "*"         shift, and go to state 26

    $default  reduce using rule 147 (pointer)

    type_qualifier  go to state 71
    pointer         go to state 72


State 47

   79 declaration: declaration_specifiers ";" .

    $default  reduce using rule 79 (declaration)


State 48

   80 declaration: declaration_specifiers init_declarator_list . ";"
   88 init_declarator_list: init_declarator_list . "," init_declarator

    ";"  shift, and go to state 73
    ","  shift, and go to state 74


State 49

   87 init_declarator_list: init_declarator .

    $default  reduce using rule 87 (init_declarator_list)


State 50

   89 init_declarator: declarator .
   90                | declarator . "=" initializer
  215 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  216                    | declaration_specifiers declarator . compound_statement
